--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-parallax": "^3.5.2",
+    "react-parallax-tilt": "^1.7.291",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.4.0",
     "sort-by": "^1.2.0",
