--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-parallax-tilt": "^1.7.291",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.4.0",
+    "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.15"
