--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.0.15",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
@@ -18,6 +21,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "react-parallax": "^3.5.2",
     "react-parallax-tilt": "^1.7.291",
     "react-responsive-carousel": "^3.2.23",
